--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-chips",
+  "name": "@didomi/ngx-chips",
   "version": "1.6.3-rc.3",
   "description": "Tag Input component for Angular",
   "scripts": {
